# better_json

./: .gitignore  .gitmodules  .readthedocs.yaml  README.md  README.rst  development-notes.md  setup.cfg  tox.ini
docs/: conf.py  index.rst  jsonc.rst  walkers.rst
sphinx_config/: compact_encoder.rst  conf.py  index.rst  jsonc.rst  walkers.rst
src/better_json/: __init__.py  json_walker.py
tests/: test_module.py
