[metadata]
name = better_json
author = Nusiq
author_email = nusiq@outlook.com
version = attr: better_json.VERSION
description = Python module that adds tools to make working with JSON data easier.
long_description = file: README.rst, LICENSE
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
project_urls =
    Source = https://github.com/Nusiq/better_json/tree/master
    Documentation = https://nusiq.github.io/better_json/

[options]
python_requires = >=3.10
package_dir =
    =src
packages = find:

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
where = src